--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   flutter_swiper: ^1.1.6
   shared_preferences: ^0.5.12+4
+  flutter_webview_plugin: ^0.3.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
